--- a/squid.conf
+++ b/squid.conf
@@ -61,4 +61,7 @@ reply_header_access Connection allow all
 ### All others are denied
 reply_header_access All deny all
 
+### Allow everything
+http_access allow all
+
 coredump_dir /var/spool/squid
