--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ socks5:
   restart: always
 
 pptp:
-  image: "mobtitude/vpn-pptp"
+  image: mobtitude/vpn-pptp
   container_name: pptp
   hostname: pptp
   network_mode: host
