--- a/squid.conf
+++ b/squid.conf
@@ -64,4 +64,13 @@ reply_header_access All deny all
 ### Allow everything
 http_access allow all
 
+### Disable all logs
+access_log none
+cache_store none 
+cache_log /dev/null 
+logfile_rotate 0
+
+### Cache dir
+cache_dir aufs /var/spool/squid 100 16 256
+
 coredump_dir /var/spool/squid
