--- a/squid.conf
+++ b/squid.conf
@@ -66,8 +66,8 @@ http_access allow all
 
 ### Disable all logs
 access_log none
-cache_store none 
-cache_log /dev/null 
+#cache_store none
+cache_log /dev/null
 logfile_rotate 0
 
 ### Cache dir
